# SEAL-SDK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SDK_test.py  SEAL.py  main.c  notify.sh  se.py  toolchain-rpi.cmake
inc/: sec_elem_abstr.h  types.h  utils.h
libs/arduino-nrfdk/libseal/: library.properties
libs/arduino-nrfdk/libseal/examples/wallet/: wallet.ino
libs/arduino-nrfdk/libseal/src/: sec_elem_abstr.h
python/: ECDHA.py  SDK_test.py  SEAL.py  requirements.txt
src/: main.c
test/: CMakeLists.txt  community_tests.c
tests/: ses_tests.c  v1_tests.c  v2_tests.c  v3_tests.c
tests/micro-ecc/python/: requirements.txt
